--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,17 @@
-# Project Files
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-Homestead.json
-Homestead.yaml
+/vendor/
+node_modules/
 npm-debug.log
 yarn-error.log
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+public/storage
+public/hot
+storage/*.key
 .env
-.phpunit.result.cache
-
-# Develop station setting
-/.idea
-/.vscode
+Homestead.yaml
+Homestead.json
 /.vagrant
-_ide_helper.php
-
-# Thumbnail cache files
-[Tt]humbs.db
-ehthumbs.db
-ehthumbs_vista.db
-._*
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-.Trash-*
-.DS_Store
-.AppleDouble
-.AppleDesktop
-.LSOverride
-.directory
-
-# Disk system file
-$RECYCLE.BIN/
-.nfs*
-
-# shortcuts
-*.lnk
